--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: runtime_named_locks
 homepage: https://pieces.app
 repository: https://github.com/open-runtime/named_locks
-version: 0.0.1
-description: A library for creating and managing named locks in Dart using FFI across macOS, Linux, and Windows.
-publish_to: none
+version: 1.0.0-beta.2
+description: A library for creating and managing named locks which leverages Dart FFI and Native Named Semaphores across across macOS, Linux, and Windows.
 environment:
   sdk: '>=3.2.0 <4.0.0'
 
@@ -15,10 +14,7 @@ platforms:
 
 dependencies:
   stack_trace: ^1.11.1
-  runtime_native_semaphores:
-    git:
-      url: https://github.com/open-runtime/native_semaphores
-      ref: aot_monorepo_compat
+  runtime_native_semaphores: ^1.0.0-beta.2
 
 
 dev_dependencies:
