--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,12 @@ platforms:
   windows:
 
 dependencies:
-  stack_trace: ^1.11.1
   runtime_native_semaphores: ^1.0.0-beta.6
+  stack_trace: ^1.11.1
 
 
 dev_dependencies:
-  test: ^1.25.5
+  lint_hard: 4.0.0
   safe_int_id: ^1.1.1
+  test: ^1.25.5
 
